[project]
name = "ursaproxy"
version = "0.2.0"
description = "A Bearblog-to-Gemini proxy showcasing Xitzin"
readme = "README.md"
authors = [
    { name = "Alan Velasco", email = "ursaproxy@alanbato.com" }
]
requires-python = ">=3.13"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "xitzin>=0.6.1",
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "markdownify>=0.12.1",
    "md2gemini>=1.9.1",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.0",
]

[project.scripts]
ursaproxy = "ursaproxy:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.0",
    "ty>=0.0.14",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.ty.src]
exclude = ["tests/"]
